--- a/NSGameDownloader/config.json
+++ b/NSGameDownloader/config.json
@@ -4,6 +4,6 @@
   "XciPanKey": "1cwIw1-qsNOKaq6xrK0VUqQ",
   "NspCookie": "jbJABRU1bnEilqgFANDScp7THxrIkl57hfDd/wzv29o=",
   "XciCookie": "83YnXyahT%2BktyGqrzphpP87nP1jVU3HIj0Jj2VXPmV4=",
-  "NutdbUrl": "https://snip.li/nutdb",
+  "NutdbUrl": "https://raw.githubusercontent.com/riggzh/ns/master/NUTDB.txt",
   "TitleKeysPath": "keys.json"
 }
