--- a/NSGameDownloader/config.json
+++ b/NSGameDownloader/config.json
@@ -1,9 +1,9 @@
 {
   "PanUrlHead": "https://pan.baidu.com/s/",
-  "NspPanKey": "1YSo7_H28r2Q_xYtB1vI2QA",
-  "XciPanKey": "1cwIw1-qsNOKaq6xrK0VUqQ",
-  "NspCookie": "jbJABRU1bnEilqgFANDScp7THxrIkl57hfDd/wzv29o=",
-  "XciCookie": "83YnXyahT%2BktyGqrzphpP87nP1jVU3HIj0Jj2VXPmV4=",
+  "NspPanKey": "1YPq08Dwox8y8uGKGePndgQ",
+  "XciPanKey": "13h3QtK5jtdDfx3FkujmaGA",
+  "NspCookie": "jbJABRU1bnFZ+szBx4jHzJID1hr8+q+TQxzMjseST7Q=",
+  "XciCookie": "83YnXyahT+n+ficP7TFUPTq+iHJR3cS0ZQRU6OCsfKw=",
   "NutdbUrl": "https://raw.githubusercontent.com/riggzh/ns/master/NUTDB.txt",
   "TitleKeysPath": "keys.json"
 }
