--- a/NSGameDownloader/config.json
+++ b/NSGameDownloader/config.json
@@ -2,8 +2,8 @@
   "PanUrlHead": "https://pan.baidu.com/s/",
   "NspPanKey": "1YPq08Dwox8y8uGKGePndgQ",
   "XciPanKey": "13h3QtK5jtdDfx3FkujmaGA",
-  "NspCookie": "jbJABRU1bnFZ+szBx4jHzJID1hr8+q+TQxzMjseST7Q=",
-  "XciCookie": "83YnXyahT+n+ficP7TFUPTq+iHJR3cS0ZQRU6OCsfKw=",
+  "NspCookie": "jbJABRU1bnFZ%2BszBx4jHzJID1hr8%2Bq%2BTQxzMjseST7Q%3D",
+  "XciCookie": "83YnXyahT%2Bn%2BficP7TFUPTq%2BiHJR3cS0ZQRU6OCsfKw%3D",
   "NutdbUrl": "https://raw.githubusercontent.com/riggzh/ns/master/NUTDB.txt",
   "TitleKeysPath": "keys.json"
 }
