--- a/NSGameDownloader/NSGameDownloader.csproj
+++ b/NSGameDownloader/NSGameDownloader.csproj
@@ -125,6 +125,7 @@
     </Compile>
     <None Include="app.manifest" />
     <None Include="config.json" />
+    <None Include="cookie.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -173,6 +174,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(ProjectDir)\config.json" "$(ProjectDir)$(OutDir)config.json"</PostBuildEvent>
+    <PostBuildEvent>copy "$(ProjectDir)\config.json" "$(ProjectDir)$(OutDir)config.json"
+copy "$(ProjectDir)\cookie.json" "$(ProjectDir)$(OutDir)cookie.json"</PostBuildEvent>
   </PropertyGroup>
 </Project>
