--- a/NSGameDownloader/config.json
+++ b/NSGameDownloader/config.json
@@ -1,8 +1,8 @@
 {
   "PanUrlHead": "https://pan.baidu.com/s/",
-  "NspPanKey": "10rQuVlqLIEnN8fnowFZlQg",
+  "NspPanKey": "1FrCdCdhdpqzZ2Mwd3HVMyg",
   "XciPanKey": "13h3QtK5jtdDfx3FkujmaGA",
-  "NspCookie": "bJABRU1bnHtcq2SfFOdoGqeCv%2F7rUAmmdbsEQm0j%2Fw%3D",
+  "NspCookie": "jbJABRU1bnGnceTfCvuIdDGpU0TkjWYoVGqL5ttk%2F1I%3D",
   "XciCookie": "83YnXyahT%2Bn%2BficP7TFUPTq%2BiHJR3cS0ZQRU6OCsfKw%3D",
   "NutdbUrl": "https://raw.githubusercontent.com/riggzh/ns/master/NUTDB.txt",
   "TitleKeysPath": "keys.json"
