--- a/NSGameDownloader/config.json
+++ b/NSGameDownloader/config.json
@@ -1,8 +1,8 @@
 {
   "PanUrlHead": "https://pan.baidu.com/s/",
-  "NspPanKey": "1l82j2iVxQsOa_MaDCKlyYQ",
+  "NspPanKey": "1KNXZhkJJ_bhy5wZPDXIMVw",
   "XciPanKey": "13h3QtK5jtdDfx3FkujmaGA",
-  "NspCookie": "jbJABRU1bnFEkb73FPoVruaAfneKZVaH%2BDQmGTmbShk%3D",
+  "NspCookie": "jbJABRU1bnF%2BGrs5LM0IpprjCsjaKDEiJlGs2%2F6CzhU%3D",
   "XciCookie": "83YnXyahT%2Bn%2BficP7TFUPTq%2BiHJR3cS0ZQRU6OCsfKw%3D",
   "NutdbUrl": "https://raw.githubusercontent.com/riggzh/ns/master/NUTDB.txt",
   "TitleKeysPath": "keys.json"
